--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="logo">
             <a href="#">
-                <img src="./img/logocall.png" alt="LOGO">
+                <img src="./src/assets/img/logocall.png" alt="LOGO">
             </a>
         </div>
 
@@ -34,11 +34,11 @@
 
                         <li class="nav-item"> <a class="nav-link active" aria-current="page"
                                 href="./index.html">Home</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="./Pages/noticias.html">Noticias</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="./Pages/politicas.html">Políticas</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="./Pages/beneficios.html">Beneficios</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="./Pages/solicitudes.html">Solicitudes</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="./Pages/vacaciones.html">Vacaciones</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./src/features/noticias.html">Noticias</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./src/features/politicas.html">Políticas</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./src/features/beneficios.html">Beneficios</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./src/features/solicitudes.html">Solicitudes</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./src/features/vacaciones.html">Vacaciones</a> </li>
 
                     </ul>
                 </div>
@@ -50,13 +50,13 @@
         <div id="carouselExample" class="carousel slide hero">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/hero-home.jpg" class="d-block w-100" alt="...">
+                    <img src="./src/assets/img/hero-home.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/hero-home-2.jpg" class="d-block w-100" alt="...">
+                    <img src="./src/assets/img/hero-home-2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/hero-home-3.jpg" class="d-block w-100" alt="...">
+                    <img src="./src/assets/img/hero-home-3.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -81,20 +81,20 @@
         <div class="container grid" style="align-items: center; justify-content: center; margin-top: 5vh;">
             <div class="col-sm-12 col-md-4">
                 <h3>Noticias</h3>
-                <a href="./Pages/noticias.html">
-                    <img src="./img/section-noticias.jpg" alt="Item 1">
+                <a href="./src/features/noticias.html">
+                    <img src="./src/assets/img/section-noticias.jpg" alt="Item 1">
                 </a>
             </div>
             <div class="col-sm-12 col-md-4">
                 <h3>Políticas</h3>
-                <a href="./Pages/politicas.html">
-                    <img src="./img/section-politicas.jpg" alt="Item 2">
+                <a href="./src/features/politicas.html">
+                    <img src="./src/assets/img/section-politicas.jpg" alt="Item 2">
                 </a>
             </div>
             <div class="col-sm-12 col-md-4">
                 <h3>Beneficios</h3>
-                <a href="./Pages/beneficios.html">
-                    <img src="./img/section-beneficios.jpg" alt="Item 3">
+                <a href="./src/features/beneficios.html">
+                    <img src="./src/assets/img/section-beneficios.jpg" alt="Item 3">
                 </a>
             </div>
         </div>
@@ -104,14 +104,14 @@
         <div class="container grid" style="align-items: center; justify-content: center;">
             <div class="col-sm-12 col-md-4">
                 <h3>Solicitudes</h3>
-                <a href="./Pages/solicitudes.html">
-                    <img src="./img/section-solicitudes.jpg" alt="Item 4">
+                <a href="./src/features/solicitudes.html">
+                    <img src="./src/assets/img/section-solicitudes.jpg" alt="Item 4">
                 </a>
             </div>
             <div class="col-sm-12 col-md-4">
                 <h3>Vacaciones</h3>
-                <a href="./Pages/vacaciones.html">
-                    <img src="./img/section-vacaciones.jpg" alt="Item 5">
+                <a href="./src/features/vacaciones.html">
+                    <img src="./src/assets/img/section-vacaciones.jpg" alt="Item 5">
                 </a>
             </div>
 
@@ -120,7 +120,7 @@
         <div class="footer-div">
             <div class="logo">
             <a href="#">
-                <img src="./img/logocall.png" alt="LOGO">
+                <img src="./src/assets/img/logocall.png" alt="LOGO">
             </a>
         </div>
             <div class="footer-text">
@@ -130,11 +130,11 @@
             <nav class="footer-menu">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./Pages/noticias.html">Noticias</a></li>
-                    <li><a href="./Pages/politicas.html">Políticas</a></li>
-                    <li><a href="./Pages/beneficios.html">Beneficios</a></li>
-                    <li><a href="./Pages/solicitudes.html">Solicitudes</a></li>
-                    <li><a href="./Pages/vacaciones.html">Vacaciones</a></li>
+                    <li><a href="./src/features/noticias.html">Noticias</a></li>
+                    <li><a href="./src/features/politicas.html">Políticas</a></li>
+                    <li><a href="./src/features/beneficios.html">Beneficios</a></li>
+                    <li><a href="./src/features/solicitudes.html">Solicitudes</a></li>
+                    <li><a href="./src/features/vacaciones.html">Vacaciones</a></li>
                 </ul>
             </nav>
             <div>
