--- a/src/features/gracias.html
+++ b/src/features/gracias.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vacaciones</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <title>Gracias</title>
+    <link rel="stylesheet" href="/css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -16,8 +16,8 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html">
-                <img src="../img/logocall.png" alt="LOGO">
+            <a href="/index.html">
+                <img src="../assets/img/logocall.png" alt="LOGO">
             </a>
         </div>
 
@@ -32,8 +32,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
 
-                        <li class="nav-item"> <a class="nav-link active" aria-current="page"
-                                href="../index.html">Home</a> </li>
+                        <li class="nav-item"> <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        </li>
                         <li class="nav-item"> <a class="nav-link" href="./noticias.html">Noticias</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="./politicas.html">Políticas</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="./beneficios.html">Beneficios</a> </li>
@@ -45,50 +45,29 @@
             </div>
         </nav>
     </header>
-    <main style="margin-top: 2vh;">
+    <main>
         <section class="hero">
-            <h2 class="hero-title">VACACIONES</h2>
-            <img src="../img/hero-vacaciones.jpg" alt="Hero Vacaciones">
+            <img src="../assets/img/hero-gracias.jpg" alt="Hero Gracias">
         </section>
-
-
-        <p style="margin-top: 5vh; margin-bottom: 5vh;">Esto lo tenemos acá por requisitos del ministerio, pero les va a dar vacaciones su madre. Tú tiene que tlabajá 📏</p>
-
-        <div class="container grid" style="display: block;" >
-        <div class="vacaciones-form-img" style="padding: 35px 35px 35px 35px;">
-            <div class="vacaciones-form">
-                <form>
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre" name="nombre"><br>
-                    <label for="email">Correo:</label>
-                    <input type="email" id="email" name="email"><br>
-                    <label for="fecha">Fecha de inicio:</label>
-                    <input type="date" id="fecha" name="fecha"><br>
-                    <label for="dias">Días solicitados:</label>
-                    <input type="number" id="dias" name="dias"><br>
-                    <button type="submit">Enviar Solicitud</button>
-                </form>
-            </div>
-            <div class="vacaciones-img">
-                <img src="../img/tlabaja.jpg" alt="Vacaciones Imagen">
-            </div>
-        </div>
-        </div>
+        <h2>¡GRACIAS!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod, urna eu tincidunt consectetur, nisi
+            nisl aliquam enim, nec dictum nisi nisl euismod enim.</p>
+        <button href="../index.html" class="btn-home">Volver al Home</a>
     </main>
     <footer>
         <div class="footer-div">
             <div class="logo">
-            <a href="../index.html">
-                <img src="../img/logocall.png" alt="LOGO">
-            </a>
-        </div>
+                <a href="/index.html">
+                    <img src="../assets/img/logocall.png" alt="LOGO">
+                </a>
+            </div>
             <div class="footer-text">
                 Somos tu socio estratégico en tercerización, ofreciendo soluciones flexibles y
                 confiables que optimizan tus procesos y fortalecen la relación con tus clientes.
             </div>
             <nav class="footer-menu">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="./noticias.html">Noticias</a></li>
                     <li><a href="./politicas.html">Políticas</a></li>
                     <li><a href="./beneficios.html">Beneficios</a></li>
