--- a/src/features/noticias.html
+++ b/src/features/noticias.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Noticias</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -16,8 +16,8 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html">
-                <img src="../img/logocall.png" alt="LOGO">
+            <a href="/index.html">
+                <img src="../assets/img/logocall.png" alt="LOGO">
             </a>
         </div>
 
@@ -32,8 +32,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
 
-                        <li class="nav-item"> <a class="nav-link active" aria-current="page"
-                                href="../index.html">Home</a> </li>
+                        <li class="nav-item"> <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        </li>
                         <li class="nav-item"> <a class="nav-link" href="./noticias.html">Noticias</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="./politicas.html">Políticas</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="./beneficios.html">Beneficios</a> </li>
@@ -48,7 +48,7 @@
     <main style="margin-top: 2vh;">
         <section class="hero">
             <h2 class="hero-title">NOTICIAS</h2>
-            <img src="../img/hero-noticias.jpg" alt="Hero Noticias">
+            <img src="../assets/img/hero-noticias.jpg" alt="Hero Noticias">
         </section>
 
         <p style="margin-top: 5vh; margin-bottom: 5vh;">Acá podrás conocer todas las noticias actuales y venideras de
@@ -57,7 +57,7 @@
 
         <div class="noticias-list">
             <div class="noticia-caja">
-                <img src="../img/estrategia.jpg" alt="Noticia 1">
+                <img src="../assets/img/estrategia.jpg" alt="Noticia 1">
                 <div class="noticia-contenido">
                     <p><b>Nueva alianza estratégica</b><br>
                         Nuestra empresa anuncia una alianza con un socio internacional para fortalecer los servicios de
@@ -71,7 +71,7 @@
 
         <div class="noticias-list">
             <div class="noticia-caja">
-                <img src="../img/expansion.jpg" alt="Noticia 2">
+                <img src="../assets/img/expansion.jpg" alt="Noticia 2">
                 <div class="noticia-contenido">
                     <p><b>Expansión de operaciones</b><br>
                         Con el objetivo de seguir creciendo, abrimos una nueva sede operativa que permitirá atender a
@@ -84,7 +84,7 @@
 
         <div class="noticias-list">
             <div class="noticia-caja">
-                <img src="../img/excelencia.jpg" alt="Noticia 3">
+                <img src="../assets/img/excelencia.jpg" alt="Noticia 3">
                 <div class="noticia-contenido">
                     <p><b>Reconocimiento a la excelencia</b><br>
                         Hemos sido galardonados por la Cámara de Comercio local por nuestro compromiso con la calidad en
@@ -100,8 +100,8 @@
     <footer>
         <div class="footer-div">
             <div class="logo">
-                <a href="../index.html">
-                    <img src="../img/logocall.png" alt="LOGO">
+                <a href="/index.html">
+                    <img src="../assets/img/logocall.png" alt="LOGO">
                 </a>
             </div>
             <div class="footer-text">
@@ -110,7 +110,7 @@
             </div>
             <nav class="footer-menu">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="./noticias.html">Noticias</a></li>
                     <li><a href="./politicas.html">Políticas</a></li>
                     <li><a href="./beneficios.html">Beneficios</a></li>
