--- a/src/features/politicas.html
+++ b/src/features/politicas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Políticas y Procedimientos</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -17,8 +17,8 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html">
-                <img src="../img/logocall.png" alt="LOGO">
+            <a href="/index.html">
+                <img src="../assets/img/logocall.png" alt="LOGO">
             </a>
         </div>
 
@@ -33,8 +33,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
 
-                        <li class="nav-item"> <a class="nav-link active" aria-current="page"
-                                href="../index.html">Home</a> </li>
+                        <li class="nav-item"> <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        </li>
                         <li class="nav-item"> <a class="nav-link" href="./noticias.html">Noticias</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="./politicas.html">Políticas</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="./beneficios.html">Beneficios</a> </li>
@@ -49,14 +49,14 @@
     <main style="margin-top: 2vh;">
         <section class="hero">
             <h2 class="hero-title">POLÍTICAS Y PROCEDIMIENTOS</h2>
-            <img src="../img/hero-politicas.jpg" alt="Hero Políticas">
+            <img src="../assets/img/hero-politicas.jpg" alt="Hero Políticas">
         </section>
 
         <p style="margin-top: 5vh; margin-bottom: 5vh;">Políticas y procedimientos, para que nuestros trabajadores estén
             en regla, como debe ser 📏🔫</p>
 
         <div class="grid" style="align-items: center; justify-content: center;">
-            <div><img src="../img/confidencial.jpg" alt="Política 1">
+            <div><img src="../assets/img/confidencial.jpg" alt="Política 1">
 
                 <button type="button" class="btn btn-primary" data-bs-toggle="popover"
                     style="margin: 10px 0px 10px 0px;" data-bs-title="1. Política de Confidencialidad"
@@ -77,7 +77,7 @@
                 <!-- Lo de arriba gracias al todo poderoso ChatGPT porque me bloquee mal y lo queria poner -->
 
             </div>
-            <div><img src="../img/atencion-cliente.jpg" alt="Política 2">
+            <div><img src="../assets/img/atencion-cliente.jpg" alt="Política 2">
 
                 <button type="button" class="btn btn-primary" data-bs-toggle="popover1"
                     style="margin: 10px 0px 10px 0px;" data-bs-title="2. Política de Atención al Cliente"
@@ -94,7 +94,7 @@
 
 
             </div>
-            <div><img src="../img/calidad.jpg" alt="Política 3">
+            <div><img src="../assets/img/calidad.jpg" alt="Política 3">
 
                 <button type="button" class="btn btn-primary" data-bs-toggle="popover2"
                     style="margin: 10px 0px 10px 0px;" data-bs-title="3. Política de Calidad"
@@ -113,7 +113,7 @@
         </div>
         <div class="grid" style="align-items: center; justify-content: center;">
 
-            <div><img src="../img/etica.jpg" alt="Política 4">
+            <div><img src="../assets/img/etica.jpg" alt="Política 4">
 
                 <button type="button" class="btn btn-primary" data-bs-toggle="popover3"
                     style="margin: 10px 0px 10px 0px;" data-bs-title="4. Política de Ética Laboral"
@@ -131,7 +131,7 @@
             </div>
 
 
-            <div><img src="../img/innovacion.jpg" alt="Política 5">
+            <div><img src="../assets/img/innovacion.jpg" alt="Política 5">
 
                 <button type="button" class="btn btn-primary" data-bs-toggle="popover4"
                     style="margin: 10px 0px 10px 0px;" data-bs-title="5. Política de Innovación"
@@ -149,7 +149,7 @@
             </div>
 
 
-            <div><img src="../img/sostenibilidad.jpg" alt="Política 6">
+            <div><img src="../assets/img/sostenibilidad.jpg" alt="Política 6">
 
                 <button type="button" class="btn btn-primary" data-bs-toggle="popover5"
                     style="margin: 10px 0px 10px 0px;" data-bs-title="6. Política de Sostenibilidad"
@@ -170,17 +170,17 @@
     <footer>
         <div class="footer-div">
             <div class="logo">
-            <a href="../index.html">
-                <img src="../img/logocall.png" alt="LOGO">
-            </a>
-        </div>
+                <a href="/index.html">
+                    <img src="../assets/img/logocall.png" alt="LOGO">
+                </a>
+            </div>
             <div class="footer-text">
                 Somos tu socio estratégico en tercerización, ofreciendo soluciones flexibles y
                 confiables que optimizan tus procesos y fortalecen la relación con tus clientes.
             </div>
             <nav class="footer-menu">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="./noticias.html">Noticias</a></li>
                     <li><a href="./politicas.html">Políticas</a></li>
                     <li><a href="./beneficios.html">Beneficios</a></li>
